--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,7 +1,7 @@
 requests
 Django>=2.2.13
 Pillow==5.4.1
-djangorestframework==3.9.1
+djangorestframework>=3.9.1
 promise==2.2.1
 pytz==2018.9
 djangorestframework-jwt
